--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@line/liff": "^2.24.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.7.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "next": "14.2.4",
     "react": "^18.3.1",
@@ -21,6 +25,7 @@
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.11",
+    "tailwind-merge": "^2.5.2",
     "vconsole": "^3.15.1"
   },
   "devDependencies": {
